tests/NormalTests/paczka1/fuzzy1/87925581.err
Error in line 2: zAsLdyFNfwD A18 92,6
Error in line 11: A956 S2 68,8
Error in line 21: zAsLdyFNfwD A18 13,5
Error in line 27: MLPRlC A18 63,3
Error in line 18: A956 A956 28,5
Error in line 33: kKsAi8Ug4F S2 17,9
Error in line 28: zAsLdyFNfwD S666 55,0
Error in line 30: Cy3alxJz S2 62,0
